datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider    = "prisma-erd-generator"
  output      = "./ERD.svg"
  theme       = "forest"
  ignoreEnums = true
  tableOnly   = true
}



enum ConsultationStatus {
  PENDING
  CONFIRMED
  DECLINED
  CANCELLED
  COMPLETED
}

enum SlotStatus {
  OPEN
  BOOKED
  BLOCKED
}

enum ProposalStatus {
  PENDING
  ACCEPTED
  DECLINED
  EXPIRED
}

enum ProposalActor {
  FAMILY
  LIBRARIAN
  SYSTEM
}

/**
 * 👇 NOVO: tipo de micro-conteúdo
 */
enum MicroContentType {
  BIBLIOTERAPIA
  DICA
  FACTO
  OUTRO
}

enum ConsultationMode {
  ONLINE
  IN_PERSON
}

model Role {
  id        Int        @id @default(autoincrement())
  name      String     @unique
  userRoles UserRole[]
}

model User {
  id           Int     @id @default(autoincrement())
  fullName     String
  email        String  @unique
  phone        String?
  citizenCard  String?
  address      String?
  postalCode   String?
  passwordHash String

  userRoles         UserRole[]
  userLibraries     UserLibrary[]
  children          ChildFamily[]
  ratings           Rating[]
  pointsHistory     PointsHistory[]
  eventReservations EventReservation[]

  consultationsAsFamily    Consultation[] @relation("ConsultationsAsFamily")
  consultationsAsLibrarian Consultation[] @relation("ConsultationsAsLibrarian")

  consultationSlots            ConsultationSlot[]     @relation("LibrarianSlots")
  consultationEventsAuthored   ConsultationEvent[]    @relation("ConsultationEventActor")
  consultationProposalsDecided ConsultationProposal[] @relation("ProposalDecider")

  newsletterSubscriptions NewsletterSubscription[]
  microInteractions       MicroInteraction[]

  /**
   * 👇 opcional: autor de micro-conteúdos
   */
  microContents MicroContent[] @relation("MicroContentAuthor")
}

model UserRole {
  user   User @relation(fields: [userId], references: [id])
  userId Int
  role   Role @relation(fields: [roleId], references: [id])
  roleId Int

  @@id([userId, roleId])
}

model Library {
  id      Int     @id @default(autoincrement())
  name    String
  address String?
  contact String?

  userLibraries UserLibrary[]
  feeds         FeedRss[]

  consultations     Consultation[]
  consultationSlots ConsultationSlot[]

  CulturalEvent CulturalEvent[]

  libraryBooks LibraryBook[]

  /**
   * 👇 NOVO: conteúdos associados a esta biblioteca
   */
  microContents MicroContent[]

  LibraryBlock LibraryBlock[]
}

model UserLibrary {
  user      User    @relation(fields: [userId], references: [id])
  userId    Int
  library   Library @relation(fields: [libraryId], references: [id])
  libraryId Int

  @@id([userId, libraryId])
}

model FeedRss {
  id            Int       @id @default(autoincrement())
  library       Library   @relation(fields: [libraryId], references: [id])
  libraryId     Int
  url           String
  lastBuildDate DateTime?
  ttl           Int?

  events CulturalEvent[]
}

model CsvSource {
  id         Int      @id @default(autoincrement())
  name       String   @unique
  filePath   String
  importDate DateTime
}

model Book {
  isbn            String  @id
  title           String
  summary         String?
  author          String
  publicationYear Int?
  collection      String?
  category        String?
  cdu             String?
  ageRange        String?
  coverUrl        String?

  ageMin    Int?
  ageMax    Int?
  genres    String[]                     @default([])
  embedding Unsupported("vector(1536)")?

  origins          BookOrigin[]
  readings         Reading[]
  ratings          Rating[]
  bookReservations BookReservation[]

  libraries LibraryBook[]

  /**
   * 👇 NOVO: ponte N:N com micro-conteúdos
   */
  microContents    MicroContentBook[]
  ConsultationBook ConsultationBook[]
}

model Origin {
  id          Int    @id @default(autoincrement())
  description String @unique

  books BookOrigin[]
}

model BookOrigin {
  book     Book   @relation(fields: [bookIsbn], references: [isbn])
  bookIsbn String
  origin   Origin @relation(fields: [originId], references: [id])
  originId Int

  @@id([bookIsbn, originId])
}

model Child {
  id            Int      @id @default(autoincrement())
  name          String
  birthDate     DateTime
  gender        String?
  readerProfile String?

  families         ChildFamily[]
  readings         Reading[]
  badgeAssignments BadgeAssignment[]
  ChildPreference  ChildPreference?
  bookReservations BookReservation[]

  ratings Rating[]

  consultations Consultation[]
}

model ChildPreference {
  childId     Int                          @unique
  profileText String?
  embedding   Unsupported("vector(1536)")?
  updatedAt   DateTime                     @updatedAt

  child Child @relation(fields: [childId], references: [id], onDelete: Cascade)
}

model ChildFamily {
  child    Child @relation(fields: [childId], references: [id], onDelete: Cascade)
  childId  Int
  family   User  @relation(fields: [familyId], references: [id])
  familyId Int

  @@id([childId, familyId])
}

model Reading {
  id            Int              @id @default(autoincrement())
  child         Child            @relation(fields: [childId], references: [id], onDelete: Cascade)
  childId       Int
  book          Book             @relation(fields: [bookIsbn], references: [isbn])
  bookIsbn      String
  startedAt     DateTime?
  finishedAt    DateTime?
  reservation   BookReservation? @relation(fields: [reservationId], references: [id], onDelete: SetNull)
  reservationId Int?
  ratings       Rating[]

  @@unique([childId, bookIsbn])
  @@index([childId, finishedAt])
  @@index([childId, bookIsbn, finishedAt])
}

model Rating {
  id      Int    @id @default(autoincrement())
  user    User   @relation(fields: [userId], references: [id])
  userId  Int
  child   Child? @relation(fields: [childId], references: [id], onDelete: SetNull)
  childId Int?

  book     Book   @relation(fields: [bookIsbn], references: [isbn])
  bookIsbn String

  reading   Reading? @relation(fields: [readingId], references: [id], onDelete: SetNull)
  readingId Int?

  stars   Int
  comment String?
  ratedAt DateTime @default(now())

  @@unique([userId, childId, bookIsbn])
  @@index([childId])
  @@index([bookIsbn])
}

model Badge {
  id       Int    @id @default(autoincrement())
  name     String @unique
  type     String
  criteria String

  assignments BadgeAssignment[]
}

model BadgeAssignment {
  child      Child    @relation(fields: [childId], references: [id], onDelete: Cascade)
  childId    Int
  badge      Badge    @relation(fields: [badgeId], references: [id])
  badgeId    Int
  assignedAt DateTime @default(now())

  @@id([childId, badgeId])
}

model PointsHistory {
  id         Int      @id @default(autoincrement())
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
  action     String
  points     Float
  actionDate DateTime @default(now())
}

model Consultation {
  id Int @id @default(autoincrement())

  family   User @relation("ConsultationsAsFamily", fields: [familyId], references: [id])
  familyId Int

  librarian   User @relation("ConsultationsAsLibrarian", fields: [librarianId], references: [id])
  librarianId Int

  child   Child? @relation(fields: [childId], references: [id], onDelete: SetNull)
  childId Int?

  library      Library?          @relation(fields: [libraryId], references: [id])
  libraryId    Int?
  title        String?
  purpose      String? // “pretexto/motivo” curto
  description  String? // brief detalhado
  modeEnum     ConsultationMode? // substitui gradualmente o legacy `mode`
  meetingUrl   String?
  meetingNotes String?
  mode         String?
  location     String?

  requestedAt DateTime           @default(now())
  startAt     DateTime?
  endAt       DateTime?
  status      ConsultationStatus @default(PENDING)

  notes String?

  slotId Int?              @unique
  slot   ConsultationSlot? @relation("ConsultationSlotLink", fields: [slotId], references: [id])

  proposals ConsultationProposal[]
  events    ConsultationEvent[]

  books          ConsultationBook[]
  microContents  ConsultationMicroContent[]
  culturalEvents ConsultationCulturalEvent[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([librarianId, startAt])
  @@index([familyId, startAt])
}

model ConsultationBook {
  consultation   Consultation @relation(fields: [consultationId], references: [id], onDelete: Cascade)
  consultationId Int
  book           Book         @relation(fields: [bookIsbn], references: [isbn], onDelete: Cascade)
  bookIsbn       String
  addedAt        DateTime     @default(now())

  @@id([consultationId, bookIsbn])
  @@index([bookIsbn])
}

model ConsultationMicroContent {
  consultation   Consultation @relation(fields: [consultationId], references: [id], onDelete: Cascade)
  consultationId Int
  microContent   MicroContent @relation(fields: [microContentId], references: [id], onDelete: Cascade)
  microContentId Int
  addedAt        DateTime     @default(now())

  @@id([consultationId, microContentId])
  @@index([microContentId])
}

model ConsultationCulturalEvent {
  consultation   Consultation  @relation(fields: [consultationId], references: [id], onDelete: Cascade)
  consultationId Int
  event          CulturalEvent @relation(fields: [eventId], references: [id], onDelete: Cascade)
  eventId        Int
  addedAt        DateTime      @default(now())

  @@id([consultationId, eventId])
  @@index([eventId])
}

model ConsultationEvent {
  id             Int          @id @default(autoincrement())
  consultation   Consultation @relation(fields: [consultationId], references: [id])
  consultationId Int

  type String
  at   DateTime @default(now())

  actor   User? @relation("ConsultationEventActor", fields: [actorId], references: [id])
  actorId Int?

  payload Json?
}

model ConsultationSlot {
  id Int @id @default(autoincrement())

  librarian   User @relation("LibrarianSlots", fields: [librarianId], references: [id])
  librarianId Int

  library   Library? @relation(fields: [libraryId], references: [id])
  libraryId Int?

  startAt DateTime
  endAt   DateTime
  status  SlotStatus @default(OPEN)

  consultation Consultation? @relation("ConsultationSlotLink")

  blockedByLibraryBlockId Int?
  blockedByLibraryBlock   LibraryBlock? @relation(fields: [blockedByLibraryBlockId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([librarianId, startAt, endAt])
  @@index([librarianId, startAt, status])
  @@index([blockedByLibraryBlockId])
}

model ConsultationProposal {
  id             Int          @id @default(autoincrement())
  consultation   Consultation @relation(fields: [consultationId], references: [id])
  consultationId Int

  proposedBy  ProposalActor
  fromStartAt DateTime?
  fromEndAt   DateTime?
  toStartAt   DateTime
  toEndAt     DateTime

  message   String?
  status    ProposalStatus @default(PENDING)
  createdAt DateTime       @default(now())
  decidedAt DateTime?

  decidedBy   User? @relation("ProposalDecider", fields: [decidedById], references: [id])
  decidedById Int?

  @@index([consultationId, status])
}

model CulturalEvent {
  id          Int       @id @default(autoincrement())
  feed        FeedRss?  @relation(fields: [feedId], references: [id])
  feedId      Int?
  guid        String    @unique
  title       String
  description String?
  pubDate     DateTime?
  startDate   DateTime
  endDate     DateTime?
  location    String?
  category    String?
  capacity    Int?
  imageUrl    String?

  library   Library? @relation(fields: [libraryId], references: [id])
  libraryId Int?

  reservations              EventReservation[]
  ConsultationCulturalEvent ConsultationCulturalEvent[]

  @@index([libraryId, startDate])
}

model EventReservation {
  id       Int           @id @default(autoincrement())
  family   User          @relation(fields: [familyId], references: [id])
  familyId Int
  event    CulturalEvent @relation(fields: [eventId], references: [id])
  eventId  Int
  bookedAt DateTime      @default(now())
  status   String

  @@unique([familyId, eventId])
  @@index([eventId, status])
}

model BookReservation {
  id         Int       @id @default(autoincrement())
  child      Child     @relation(fields: [childId], references: [id], onDelete: Cascade)
  childId    Int
  book       Book      @relation(fields: [bookIsbn], references: [isbn])
  bookIsbn   String
  reservedAt DateTime  @default(now())
  readings   Reading[]

  @@unique([childId, bookIsbn])
  @@index([childId, bookIsbn, reservedAt])
}

model Newsletter {
  id          Int      @id @default(autoincrement())
  title       String
  content     String
  publishedAt DateTime @default(now())
}

model NewsletterSubscription {
  id           Int      @id @default(autoincrement())
  family       User     @relation(fields: [familyId], references: [id])
  familyId     Int
  frequency    String
  subscribedAt DateTime @default(now())
  status       String
}

model MicroContent {
  id          Int              @id @default(autoincrement())
  /**
   * 👇 NOVOS CAMPOS
   */
  type        MicroContentType @default(BIBLIOTERAPIA)
  text        String
  tags        String[]         @default([])
  isPublished Boolean          @default(true)
  publishedAt DateTime?        @default(now())

  /**
   * associação direta à biblioteca (opcional)
   */
  library   Library? @relation(fields: [libraryId], references: [id])
  libraryId Int?

  /**
   * autor (opcional)
   */
  author   User? @relation("MicroContentAuthor", fields: [authorId], references: [id])
  authorId Int?

  /**
   * N:N com livros por ISBN
   */
  books MicroContentBook[]

  interactions MicroInteraction[]

  createdAt                DateTime                   @default(now())
  updatedAt                DateTime                   @updatedAt
  ConsultationMicroContent ConsultationMicroContent[]

  @@index([libraryId, isPublished])
  @@index([publishedAt])
  @@index([type])
}

model MicroInteraction {
  id             Int          @id @default(autoincrement())
  user           User         @relation(fields: [userId], references: [id])
  userId         Int
  microContent   MicroContent @relation(fields: [microContentId], references: [id])
  microContentId Int
  interactedAt   DateTime     @default(now())

  @@unique([userId, microContentId])
  @@index([userId, microContentId])
}

/**
 * 👇 NOVO: tabela ponte N:N MicroContent ↔ Book (por ISBN)
 */
model MicroContentBook {
  microContent   MicroContent @relation(fields: [microContentId], references: [id], onDelete: Cascade)
  microContentId Int

  book     Book   @relation(fields: [bookIsbn], references: [isbn], onDelete: Cascade)
  bookIsbn String

  @@id([microContentId, bookIsbn])
  @@index([bookIsbn])
}

model LibraryBook {
  library   Library @relation(fields: [libraryId], references: [id], onDelete: Cascade)
  libraryId Int

  book     Book   @relation(fields: [bookIsbn], references: [isbn], onDelete: Cascade)
  bookIsbn String

  quantity    Int?
  shelfCode   String?
  accessionNo String?

  addedAt   DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@id([libraryId, bookIsbn])
  @@index([bookIsbn])
}

model LibraryBlock {
  id        Int      @id @default(autoincrement())
  library   Library  @relation(fields: [libraryId], references: [id], onDelete: Cascade)
  libraryId Int
  startAt   DateTime
  endAt     DateTime
  reason    String?

  slots ConsultationSlot[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([libraryId, startAt])
  @@index([libraryId, endAt])
}
